@@ -6,12 +6,14 @@
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
+			<label index="tt_address.disablePositionFixing">Disable relocation</label>
 			<label index="tx_adgooglemaps_domain_model_layer.coordinatesProvider.addresses">Addresses</label>
 			<label index="tx_adgooglemaps_domain_model_layer.coordinatesProvider.addressGroups">Address groups</label>
 			<label index="tx_adgooglemaps_domain_model_layer.addresses">Addresses:</label>
 			<label index="tx_adgooglemaps_domain_model_layer.addressGroups">Address groups:</label>
 		</languageKey>
 		<languageKey index="de" type="array">
+			<label index="tt_address.disablePositionFixing">Deaktiviere Standortbestimmung</label>
 			<label index="tx_adgooglemaps_domain_model_layer.coordinatesProvider.addresses">Adressen</label>
 			<label index="tx_adgooglemaps_domain_model_layer.coordinatesProvider.addressGroups">Adressgruppen</label>
 			<label index="tx_adgooglemaps_domain_model_layer.addresses">Adressen:</label>
