@@ -3,3 +3,4 @@
 1.0.0	First release. Moved from ad_google_maps
 
 1.1.0	[TASK] Changed many t3lib_div::makeInstance to the extbase $this->objectManager->create/get.
+		[FEATURE] Issue #27638 "Option to disable post processing when tt_address record is saved.". New option "Disable relocation" set to coordinates. Thanks to Wolfgang Rotschek.
